Se corrigen varios errores de calidad en GprCupController e ImageController. Se incluye en el nombre del fichero de descarga del post de una ronda el número de ronda al final (con cero por delante si es menor de 10)